# SeisLearn

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/518695555362684781/: meta.yaml
mlruns/915838010382414919/: meta.yaml
mlruns/997073005670415334/: meta.yaml
notebooks/: PhasenetInference.ipynb  data.ipynb  distances.ipynb  unclear.ipynb
notebooks/completed/: DivideAndConquer.ipynb  IoU.ipynb  PhaseNet.ipynb  PhasenetMetrics.ipynb  seisbench.ipynb  seisbench_train.ipynb
scripts/: Readme.md  copy_test_data.sh  create_large_file.sh  create_test_data.sh  create_training_data.sh  cross_correlate_data.sh  evaluate_model.sh  setup.sh  train_all_random.sh  train_all_sparse.sh  train_random_model.sh  train_sparse_model.sh  train_stratified_model.sh
scripts/random/: train_random_model_125030.sh  train_random_model_172104.sh  train_random_model_259057.sh  train_random_model_458130.sh  train_random_model_49036.sh  train_random_model_59837.sh  train_random_model_74454.sh  train_random_model_756821.sh  train_random_model_94520.sh
scripts/sparse/: train_sparse_model_100.sh  train_sparse_model_1000.sh  train_sparse_model_1250.sh  train_sparse_model_1500.sh  train_sparse_model_1750.sh  train_sparse_model_2000.sh  train_sparse_model_250.sh  train_sparse_model_500.sh  train_sparse_model_750.sh
seisnet/: __init__.py  tmp.py
seisnet/dataloaders/: __init__.py  database.py  datasets.py  eval_loader.py  loaders.py  transforms.py  transforms_dist.py
seisnet/models/: __init__.py  blocks.py  dvc.py  eval_utils.py  phasenet.py  train_utils.py
seisnet/pipelines/: __init__.py  cleanup.py  cluster_events.py  create_large_npz.py  cross_corr.py  dist_train.py  dist_train_random.py  evaluation.py  preprocessing.py  sparse_sampler.py  training.py
(+3778 files in other folders)
